--- a/index.html
+++ b/index.html
@@ -1,20 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Create beautiful photo collages instantly">
-  <meta name="theme-color" content="#000000">
-  <title>CollageHub</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🖼️</text></svg>">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Collage Hub</title>
+
+<style>
+  body {
+    margin: 0;
+    background: #000;
+    color: #fff;
+    font-family: Arial, sans-serif;
+  }
+
+  .container {
+    max-width: 900px;
+    margin: auto;
+    padding: 16px;
+  }
+
+  button {
+    cursor: pointer;
+    border: none;
+    font-weight: bold;
+  }
+
+  .primary {
+    background: #f97316;
+    color: #000;
+    padding: 16px;
+    width: 100%;
+    font-size: 18px;
+  }
+
+  .panel {
+    background: #18181b;
+    padding: 16px;
+    margin-bottom: 16px;
+  }
+
+  .grid {
+    display: grid;
+    gap: 8px;
+  }
+
+  canvas {
+    max-width: 100%;
+    border: 2px solid #3f3f46;
+    touch-action: none;
+  }
+
+  img.thumb {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
 </head>
 <body>
-  <div id="root"></div>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-  <script src="app.js"></script>
+
+<div class="container">
+  <h1 style="text-align:center">
+    COLLAGE <span style="background:#f97316;color:#000;padding:4px 8px">HUB</span>
+  </h1>
+
+  <input id="fileInput" type="file" accept="image/*" multiple hidden />
+  <button class="primary" onclick="fileInput.click()">UPLOAD PHOTOS (<span id="count">0</span>)</button>
+
+  <div class="panel">
+    <canvas id="canvas"></canvas>
+  </div>
+
+  <button class="primary" onclick="download()">DOWNLOAD COLLAGE</button>
+</div>
+
+<script>
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+const fileInput = document.getElementById('fileInput');
+const countEl = document.getElementById('count');
+
+let images = [];
+let transforms = {};
+let editing = null;
+let dragging = false;
+let dragStart = {x:0,y:0};
+
+const layout = {
+  cells: [
+    {x:0,y:0,w:0.5,h:0.5},
+    {x:0.5,y:0,w:0.5,h:0.5},
+    {x:0,y:0.5,w:0.5,h:0.5},
+    {x:0.5,y:0.5,w:0.5,h:0.5}
+  ]
+};
+
+function getTransform(i){
+  return transforms[i] || {scale:1,offsetX:0,offsetY:0,stretch:false};
+}
+
+function draw(){
+  if (!images.length) return;
+
+  canvas.width = 1200;
+  canvas.height = 1200;
+
+  ctx.fillStyle = "#fff";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  layout.cells.forEach((c,i)=>{
+    if (!images[i]) return;
+    const img = images[i].img;
+    const t = getTransform(i);
+
+    const cx = c.x * canvas.width;
+    const cy = c.y * canvas.height;
+    const cw = c.w * canvas.width;
+    const ch = c.h * canvas.height;
+
+    let dw, dh;
+    if (t.stretch){
+      dw = cw; dh = ch;
+    } else {
+      const ia = img.width / img.height;
+      const ca = cw / ch;
+      if (ia > ca){ dh = ch; dw = dh * ia; }
+      else { dw = cw; dh = dw / ia; }
+    }
+
+    dw *= t.scale;
+    dh *= t.scale;
+
+    const maxX = Math.max(0,(dw-cw)/2);
+    const maxY = Math.max(0,(dh-ch)/2);
+
+    const ox = Math.max(-maxX,Math.min(maxX,t.offsetX));
+    const oy = Math.max(-maxY,Math.min(maxY,t.offsetY));
+
+    const dx = cx + (cw-dw)/2 + ox;
+    const dy = cy + (ch-dh)/2 + oy;
+
+    ctx.save();
+    ctx.beginPath();
+    ctx.rect(cx,cy,cw,ch);
+    ctx.clip();
+    ctx.drawImage(img,dx,dy,dw,dh);
+    ctx.restore();
+  });
+}
+
+fileInput.onchange = e=>{
+  [...e.target.files].forEach(file=>{
+    const r = new FileReader();
+    r.onload = ev=>{
+      const img = new Image();
+      img.onload = ()=>{
+        images.push({src:ev.target.result,img});
+        draw();
+        countEl.textContent = images.length;
+      };
+      img.src = ev.target.result;
+    };
+    r.readAsDataURL(file);
+  });
+};
+
+canvas.onmousedown = e=>{
+  dragging = true;
+  dragStart = {x:e.offsetX,y:e.offsetY};
+};
+
+canvas.onmousemove = e=>{
+  if (!dragging) return;
+  const dx = e.offsetX - dragStart.x;
+  const dy = e.offsetY - dragStart.y;
+  const t = getTransform(0);
+  transforms[0] = {...t,offsetX:t.offsetX+dx*2,offsetY:t.offsetY+dy*2};
+  dragStart = {x:e.offsetX,y:e.offsetY};
+  draw();
+};
+
+canvas.onmouseup = ()=>dragging=false;
+canvas.onmouseleave = ()=>dragging=false;
+
+function download(){
+  canvas.toBlob(b=>{
+    const a=document.createElement('a');
+    a.href=URL.createObjectURL(b);
+    a.download='collage.png';
+    a.click();
+  });
+}
+</script>
 </body>
 </html>
